// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ribbon should render ribbon if the ribbon is present in the config 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "ribbon": Object {
          "url": "foo.bar",
        },
      },
    }
  }
>
  <Consumer(Ribbon) />
</ContextProvider>
`;

exports[`Ribbon should return null if the ribbon is not present in the config 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {},
    }
  }
>
  <Consumer(Ribbon) />
</ContextProvider>
`;

exports[`RibbonRenderer should render ribbon with a text 1`] = `
<div
  className="root"
>
  <a
    className="link"
    href="http://example.com"
  >
    Share the repo
  </a>
</div>
`;

exports[`RibbonRenderer should render ribbon with url 1`] = `
<div
  className="root"
>
  <a
    className="link"
    href="http://example.com"
  >
    Fork me on GitHub
  </a>
</div>
`;
